--- a/htmlfile/class12.html
+++ b/htmlfile/class12.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>class12</title>
-    <link rel="stylesheet" href="/htmlfile/cssfile/imgfile/class12.css">
+    <link rel="stylesheet" href="../htmlfile/cssfile/imgfile/class12.css">
     <link rel="icon" type="image/x-icon" href="/htmlfile/cssfile/imgfile/icon2 (1).png">
 </head>
 <body class="body">
